tests/snapshots/integration__integration_tests__post_create_commands__post_create_verbose_template_expansion.snap
---
source: tests/integration_tests/post_create_commands.rs
info:
  program: wt
  args:
    - "-v"
    - switch
    - "--create"
    - verbose-hooks
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMON_DIR: ""
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_DIR: ""
    GIT_EDITOR: ""
    GIT_INDEX_FILE: ""
    GIT_OBJECT_DIRECTORY: ""
    GIT_TERMINAL_PROMPT: "0"
    GIT_WORK_TREE: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[2m○[22m Expanding [1mworktree-path[22m
[107m [0m [2m[0m[2m[34m../[0m[2m[32m{{[0m[2m[34m[0m[2m repo [0m[2m[32m}}[0m[2m.[0m[2m[32m{{[0m[2m branch [0m[2m[36m|[0m[2m [0m[2m[34msanitize[0m[2m [0m[2m[32m}}[0m[2m
[107m [0m [2m→[22m
[107m [0m [2m[0m[2m[34m../repo.verbose-hooks[0m[2m
[2m○[22m Expanding [1mproject:setup[22m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Setting up {{ branch | sanitize }} in {{ worktree_path }}'[0m[2m
[107m [0m [2m→[22m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Setting up verbose-hooks in _REPO_.verbose-hooks'[0m[2m
[2m○[22m template variables:
[107m [0m branch                = verbose-hooks
[107m [0m worktree_path         = _REPO_.verbose-hooks
[107m [0m worktree_name         = repo.verbose-hooks
[107m [0m commit                = 10d3d6e5762be0da3395f897e4656e429b1e5e94
[107m [0m short_commit          = 10d3d6e
[107m [0m upstream              = (unset)
[107m [0m base                  = main
[107m [0m base_worktree_path    = _REPO_
[107m [0m target                = verbose-hooks
[107m [0m target_worktree_path  = _REPO_.verbose-hooks
[107m [0m pr_number             = (unset)
[107m [0m pr_url                = (unset)
[107m [0m repo                  = repo
[107m [0m repo_path             = _REPO_
[107m [0m owner                 = (unset)
[107m [0m primary_worktree_path = _REPO_
[107m [0m default_branch        = main
[107m [0m remote                = origin
[107m [0m remote_url            = ../origin.git
[107m [0m cwd                   = _REPO_.verbose-hooks
[107m [0m hook_type             = pre-create
[107m [0m hook_name             = setup
[36m◎[39m [36mRunning pre-create [1mproject:setup[22m @ [1m_REPO_.verbose-hooks[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Setting up verbose-hooks in _REPO_.verbose-hooks'[0m[2m
[0mSetting up verbose-hooks in _REPO_.verbose-hooks
[32m✓[39m [32mCreated branch [1mverbose-hooks[22m from [1mmain[22m and worktree @ [1m_REPO_.verbose-hooks[22m[39m
[33m▲[39m [33mCannot change directory — shell integration not installed[39m
[2m↳[22m [2mTo enable automatic cd, run [4mwt config shell install[24m[22m
